--- a/index.html
+++ b/index.html
@@ -90,6 +90,22 @@
 
     <footer>
 
+        <div class="footer-left">
+            <h3>prova</h3>
+
+        </div>
+
+        <div class="footer-center">
+            <h3>prova</h3>
+
+        </div>
+
+        <div class="footer-right">
+            <h3>prova</h3>
+
+        </div>
+
+
 
     </footer>
     
