--- a/index.html
+++ b/index.html
@@ -12,6 +12,33 @@
     <main class="d-flex">
 
         <aside class="sidebar">
+            <div class="logo">
+                <img src="./img/logo.svg" alt="">
+            </div>
+
+            <nav>
+                <ul class="sidebar-list">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Cerca</a></li>
+                    <li><a href="">La tua Libreria</a></li>
+
+                </ul>
+            </nav>
+
+            <div class="playlist">
+                <ul>
+                    <li><h3>PLAYLIST</h3></li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+
+
+                </ul>
+            </div>
 
         </aside>
 
