liste della sidebar

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <img src="./img/logo.svg" alt="">
             </div>
 
-            <nav>
-                <ul class="sidebar-list">
+            <nav class="sidebar-list">
+                <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">Cerca</a></li>
                     <li><a href="">La tua Libreria</a></li>
@@ -26,7 +26,7 @@
             </nav>
 
             <div class="playlist">
-                <ul>
+                <ul class="playlist-list">
                     <li><h3>PLAYLIST</h3></li>
                     <li>Nome Playlist</li>
                     <li>Nome Playlist</li>
@@ -59,7 +59,7 @@
             </nav>
 
             <section id="recently-played">
-                <h2>Titolo sezione</h2>
+                <h2>Recently Played</h2>
                 <ul class="cover-list d-flex wrap">
                     <li class="cover-item">
                         <div class="cover-container">
