--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <div class="sidebar-bottom">
                 <div class="download">
                     <div class="download-img">
+                        
                         <img src="./img/download.svg" alt="">
                         <img src="./img/profile.svg" alt="">
                     </div>
@@ -74,7 +75,13 @@
         </aside>
 
         <div class="content overflow">
-            <div class="cta">FIXED</div>
+            <div class="cta">
+                <div class="upgrade-btn">
+                    <a href="#" class="btn">ESEGUI UPGRADE</a>
+
+
+                </div>
+            </div>
             <nav class="content-nav">
                 <ul class="main-menu wrap">
                     <li><a href="">IN EVIDENZA</a></li>
