padding dei titoli di inizio sezioni

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </nav>
 
             <section id="recently-played">
-                <h2 class="text-white">Recently Played</h2>
+                <h2 class="text-white title-section">Recently Played</h2>
                 <ul class="cover-list d-flex wrap">
                     <li class="cover-item">
                         <div class="cover-container">
@@ -159,7 +159,7 @@
 
 
               <section id="creator-played">
-                <h2 class="text-white">Creato per John Doe</h2>
+                <h2 class="text-white title-section">Creato per John Doe</h2>
                 <ul class="cover-list d-flex wrap">
                     <li class="cover-item">
                         <div class="cover-container">
@@ -182,7 +182,7 @@
             </section>
 
             <section id="popular-creator">
-                <h2 class="text-white">Artisti Popolari</h2>
+                <h2 class="text-white title-section">Artisti Popolari</h2>
                 <ul class="cover-list d-flex wrap">
                     <li class="cover-item">
                         <div class="cover-container">
