implementazione sidebar-top

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </nav>
     
                 <div class="playlist">
-                    <h3>PLAYLIST</h3>
+                    <h4 class="title-playlist">PLAYLIST</h4>
                     <a href="" class="add-playlist">Add Playlist</a>
                     <ul class="playlist-list overflow">
                         
