button esegui upgrade

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 
         <div class="content overflow">
             <div class="cta">
-                <div class="upgrade-btn">
-                    <a href="#" class="btn">ESEGUI UPGRADE</a>
+               
+                    <a href="#" class="btn text-white">ESEGUI UPGRADE</a>
 
 
-                </div>
+                
             </div>
             <nav class="content-nav">
                 <ul class="main-menu wrap">
